--- a/public/upgrade-browser.html
+++ b/public/upgrade-browser.html
@@ -57,7 +57,7 @@ span{display:block;font-size:12px;line-height:12px;}
 <p>如果你不知道升级浏览器是什么意思，请请教一些熟练电脑操作的朋友。如果你使用的不是IE6/7/8/9/10，而是360浏览器、QQ浏览器、搜狗浏览器等，出现这个页面是因为你使用的不是该浏览器的最新版本，升级至最新即可。</p>
 <hr>
 <h2>一起抵制IE6、IE7、IE8、IE9、IE10</h2>
-<p>为了兼容这个曾经的浏览器霸主，网页设计人员需要做大量的代码工作。对于普通用户而言，低版本IE更是一个岌岌可危的安全隐患，在Windows历史上几次大的木马病毒事件都是利用IE漏洞进行传播。所以，请和我们一起抵制IE的早期版本！<a href="https://support.dmeng.net/kill-old-versions-of-ie.html">如何添加IE浏览器升级提示？</a></p>
+<p>为了兼容这个曾经的浏览器霸主，网页设计人员需要做大量的代码工作。对于普通用户而言，低版本IE更是一个岌岌可危的安全隐患，在Windows历史上几次大的木马病毒事件都是利用IE漏洞进行传播。所以，请和我们一起抵制IE的早期版本！</p>
 
 </body>
 </html>
